[project]
name = "pid_analysis"
version = "3.2"
description = "Dewan Lab PID processing package"
authors = [
    {name="Austin Pauley", email="pauley@psy.fsu.edu"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'pandas',
    'tqdm',
    'openpyxl',
    'mat73',
    "scipy-stubs~=1.14.1",
    "pandas-stubs~=2.2.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
